--- a/timeline.html
+++ b/timeline.html
@@ -4,19 +4,20 @@
   <title></title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <style type="text/css">
-* {
+*{
   box-sizing: border-box;
 }
-
+html{
+  padding-top: 400px;
+}
 .box {
   background-image: url(https://s-media-cache-ak0.pinimg.com/736x/80/91/f9/8091f9dceb2ea55fa7b57bb7295e1824.jpg);
   background-size: cover;
   width: 350px;
-  height: 600px;
-  /*position: absolute;
-  top: 50%;
+  height: 700px;
+  position: absolute;
   left: 50%;
-  */transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .box .but {
@@ -32,12 +33,11 @@
 
 .box .top {
   position: absolute;
-  top: 0;
   color: white;
   font-size: 1.3em;
   width: 100%;
   height: 20%;
-  padding: 15px;
+  padding-left: 15px;
 }
 
 .box .top .menu {
@@ -55,9 +55,8 @@
   line-height: 30px;
   font-family: "Lato";
   width: 50%;
-  padding: 15px;
+  padding-left: 15px;
   height: 100px;
-  float: left;
 }
 
 .box .time #date {
@@ -184,14 +183,6 @@
     <div class="col col-lg-4">
       <div class="box">
         <div class="mask"></div>
-        <div class="top">
-          <div class="menu but">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-          </div>
-          <div class="search but">
-            <i class="fa fa-search" aria-hidden="true"></i>
-          </div>
-        </div>
         <div class="time">
           <span id="date">Sunday</span><br>
           <span id="fulldate">September,11,2016</span>
@@ -200,7 +191,6 @@
           29&#8451;<i class="wi wi-solar-eclipse"></i>
         </div>
         <div class="middle">
-          <span id="hi">Hello Hưng !</span>
           <div class="timeline">
             <ul>
               <li>
@@ -233,14 +223,24 @@
                   <span id="sub">awesome meat stew</span>
                 </div>
               </li>
+              <li>
+                <div class="hour">
+                  <span>12</span>
+                  <span id="sub">AM</span>
+                </div>
+                <div class="work">
+                  <span>Lunchtime!</span><br />
+                  <span id="sub">awesome meat stew</span>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
-        <div class="bottom">
+        <!-- <div class="bottom">
           <button id="done"><i class="fa fa-check" aria-hidden="true"></i></button>
           <button id="edit"><i class="fa fa-pencil" aria-hidden="true"></i></button>
           <button id="plus"><i class="fa fa-plus" aria-hidden="true"></i></button>
-        </div>
+        </div> -->
       </div>      
     </div>
     <div class="col col-lg-4">
