--- a/button.html
+++ b/button.html
@@ -46,7 +46,7 @@
   background-color: #5B7BD5;
   background-image: linear-gradient(#5B7BD5, #4864B1);
 }
-
+/*In index there is paddind in li and a tags which would increase the ditance*/
 </style>
 </head>
 <body>
