--- a/button.html
+++ b/button.html
@@ -3,25 +3,26 @@
 <head>
   <title></title>
 <style type="text/css">
-
 .loginBtn {
-  /*box-sizing: border-box;*/
-  /*position: relative;*/
+  box-sizing: border-box;
+  position: relative;
   /*margin: 0.2em;*/
+  padding: 0 15px 0 46px;
+  border: none;
   /*text-align: left;*/
-  /*line-height: 34px;*/
-  /*white-space: nowrap;*/
+  line-height: 34px;
+  white-space: nowrap;
   border-radius: 0.2em;
   font-size: 16px;
   color: #FFF;
 }
 .loginBtn:before {
   content: "";
-  /*box-sizing: border-box;*/
-  /*position: absolute;
+  box-sizing: border-box;
+  position: absolute;
   top: 0;
   left: 0;
-  */width: 34px;
+  width: 34px;
   height: 100%;
 }
 .loginBtn:focus {
@@ -46,12 +47,11 @@
   background-color: #5B7BD5;
   background-image: linear-gradient(#5B7BD5, #4864B1);
 }
+
 /*In index there is paddind in li and a tags which would increase the ditance*/
 </style>
 </head>
 <body>
-<button class="loginBtn loginBtn--facebook">
-  Login
-</button>
+<button class="loginBtn loginBtn--facebook">Login</button>
 </body>
 </html> 
